fix: Fix a bug which breaks layout on mobile devices

--- a/styles/feed.css
+++ b/styles/feed.css
@@ -186,6 +186,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 0.25rem;
     cursor: pointer;
 }
@@ -194,6 +195,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
