--- a/styles/newpost.css
+++ b/styles/newpost.css
@@ -32,6 +32,7 @@
 /* Text Area */
 .newpost > .input-container > textarea {
     resize: none;
+    width: 100%;
     height: 5rem;
     background-color: black;
     color: white;
@@ -53,6 +54,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
+    flex-wrap: wrap;
     gap: 1rem;
     padding-top: 0.5rem;
 }
